Fix close button on mobile

--- a/drupal/sites/all/themes/tp4/css/styles.css
+++ b/drupal/sites/all/themes/tp4/css/styles.css
@@ -4188,6 +4188,8 @@ body.page-node.node-type-feature-article #main.with-sidebar #primary {
     color: black;
     font-family: SSGizmo;
     text-decoration: none;
+    z-index: 1001;
+    padding: 0 0 30px 10px;
   }
 }
 @media all and (min-width: 768px) {
@@ -4197,7 +4199,7 @@ body.page-node.node-type-feature-article #main.with-sidebar #primary {
     visibility: hidden;
   }
 }
-/* line 241, ../sass/page/_layout.scss */
+/* line 243, ../sass/page/_layout.scss */
 #block-boxes-ga-mobile-320x50.hide {
   display: none;
   visibility: hidden;
