--- a/drupal/sites/all/themes/tp4/sass/page/_layout.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_layout.scss
@@ -232,6 +232,8 @@ body {
       color: black;
       font-family: SSGizmo;
       text-decoration: none;
+      z-index: 1001;
+      padding: 0 0 30px 10px;
     }
   }
     @include breakpoint($breakpoint-tablet) {
@@ -239,7 +241,7 @@ body {
     visibility: hidden;
   }
   &.hide {
-         display: none;
+    display: none;
     visibility: hidden; 
   }
 }
